# gnomon

./: .coderabbit.yaml  .gitignore  LICENSE  README.md  SECURITY.md  cubic.yaml  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: INDEX.md  architecture.md  event-schema-v2.md
src/gnomon/: __init__.py  event_schema.py  events.py  telemetry.py
tests/: test_telemetry.py
